# Financial-SDG-GARCH

./: .pre-commit-config.yaml  CITATION.cff  CLEANROOM_STATUS.md  MANIFEST_REQUIRED.json  MANIFEST_REQUIRED.txt  Makefile  README.md  REPOSITORY_CLEANUP_SUMMARY.md  ai.md  artifacts_manifest.json  check_fgarch_model.py  cleanup_repository.py  correct_model_analysis.py  create_comprehensive_dashboard.bat  create_working_dashboard.bat  debug_models.py  fix_all_issues.bat  fix_and_update_dashboard.bat  fix_final_classification.bat  fix_final_model_count.bat  fix_model_separation.bat  investigate_fgarch.py  pyproject.toml  quick_dashboard_update.bat  rename_fgarch_dashboard.bat  requirements.txt  run_all.bat  run_complete_analysis.bat  run_comprehensive_dashboard.bat  run_modular.bat  start_research_dashboard.bat  start_results_viewer.bat  update_complete_dashboard.bat  update_comprehensive_dashboard.bat  update_final_dashboard.bat  update_nf_dashboard.bat  update_research_dashboard.bat  update_standardized_dashboard.bat
.github/workflows/: pages.yml
archive/: Makefile_Outdated  run_all.sh  run_complete_pipeline.R
archive/duplicate_results/: Consolidated_Results_all.xlsx  Consolidated_Results_performance.xlsx  NF_GARCH_Results_manual.xlsx
archive/installation_scripts/: quick_install.R  quick_install_python.py  setup_guide.bat
archive/legacy_documentation/: FILE_REORGANIZATION_SUMMARY.md  MANUAL_GARCH_DOCUMENTATION.md  MODULAR_PIPELINE_GUIDE.md  MODULAR_PIPELINE_RECONCILIATION_SUMMARY.md  PIPELINE_COMPLETION_SUMMARY.md  PIPELINE_FIXES_SUMMARY.md  PIPELINE_STATUS_REPORT.md  PLOT_QUALITY_IMPROVEMENTS_SUMMARY.md  REPOSITORY_SIMPLIFICATION_SUMMARY.md  STRESS_TESTING_SUMMARY.md  UNUSED_FILES_ANALYSIS.md  UTILITIES_DOCUMENTATION.md
archive/legacy_scripts/: run_all_legacy.bat  simulate_nf_garch_engine_legacy.R
archive/old_outputs/: Dissertation_Consolidated_Results.xlsx  NF_GARCH_Results_manual.xlsx  NF_GARCH_Results_rugarch.xlsx  pipeline_diagnostic_report.csv
archive/unused_scripts/: simulate_nf_garch.R
checkpoints/: pipeline_status.json
data/raw/: fx_equity_prices.csv
data/residuals_by_model/: egarch_equity_AAPL_residuals_synthetic.csv  egarch_equity_AMZN_residuals_synthetic.csv  egarch_equity_DJT_residuals_synthetic.csv  egarch_equity_MLGO_residuals_synthetic.csv  egarch_equity_NVDA_residuals_synthetic.csv  egarch_fx_EURUSD_residuals_synthetic.csv  egarch_fx_EURZAR_residuals_synthetic.csv  egarch_fx_GBPCNY_residuals_synthetic.csv  egarch_fx_GBPUSD_residuals_synthetic.csv  egarch_fx_USDZAR_residuals_synthetic.csv  equity_AAPL_residuals_TGARCH_residuals_synthetic_synthetic.csv  equity_AAPL_residuals_synthetic.csv  (+150 more)
docs/: README.md  index.html  notes.md  research_dashboard.html  winrates.json
environment/: requirements.txt
expected/: metrics_baseline.csv
nf_generated_residuals/: TGARCH_fx_EURZAR_residuals_synthetic.csv
tests/: test_collect_results.py  test_manifests.py  test_metrics_baseline.py  test_seeds.py
tools/: README.md  archive_nonessential.py  build_dashboard.py  build_manifest.py  build_results.py  check_artifact_hashes.py  check_regression.py  collect_results.py  create_complete_analysis_dashboard.py  create_complete_nf_garch_dashboard.py  create_comprehensive_dashboard.py  create_comprehensive_evaluation_dashboard.py  create_comprehensive_final_dashboard.py  create_final_nf_garch_dashboard.py  create_nf_garch_dashboard.py  create_research_dashboard.py  create_research_dashboard_v2.py  create_simple_dashboard.py  create_standardized_dashboard.py  create_working_dashboard.py  extract_nf_garch_data.py  fix_all_issues.py  fix_correct_model_count.py  fix_final_model_classification.py  fix_model_separation.py  fix_nf_garch_classification.py  rename_fgarch_to_nf_tgarch.py  sanitize_repo.py  sanitize_rules.yml  snapshot_artifacts.py  standardize_outputs.py  trace_python_deps.py  trace_r_deps.R
(+113 files in other folders)
